Rollback overflow fixes for featured posts.

--- a/assets/css/blog/featured.css
+++ b/assets/css/blog/featured.css
@@ -1,7 +1,3 @@
-.featured-posts-container {
-    overflow-x: hidden;
-}
-
 .featured-posts {
     margin: 45px 0;
 }
